--- a/php-5.6-fpm-alpine/Dockerfile
+++ b/php-5.6-fpm-alpine/Dockerfile
@@ -19,7 +19,7 @@ RUN apk update && \
     echo -e "HostKey ${SSH_SERVER_KEYS}ssh_host_ed25519_key" >> /etc/ssh/sshd_config && \
     sed -i "s/#PermitRootLogin.*/PermitRootLogin\ yes/" /etc/ssh/sshd_config && \
     echo "root:root" | chpasswd && \
-    rm -rf /var/cache/apk/* /tmp
+    rm -rf /var/cache/apk/* /tmp/*
 
 #
 # Saving ssh host keys
