--- a/php-7.0-fpm-alpine/Dockerfile
+++ b/php-7.0-fpm-alpine/Dockerfile
@@ -19,6 +19,7 @@ RUN apk update && \
     echo -e "HostKey ${SSH_SERVER_KEYS}ssh_host_ed25519_key" >> /etc/ssh/sshd_config && \
     sed -i "s/#PermitRootLogin.*/PermitRootLogin\ yes/" /etc/ssh/sshd_config && \
     echo "root:root" | chpasswd && \
+    chmod +x /usr/local/bin/entrypoint.sh && \
     rm -rf /var/cache/apk/* /tmp/*
 
 #
@@ -34,4 +35,4 @@ EXPOSE 22
 
 WORKDIR ${PROJECT_PATH}
 
-ENTRYPOINT ["entrypoint.sh"]
+CMD ["entrypoint.sh"]
