--- a/php-5.6-fpm-alpine/rootfs/etc/supervisor.d/supervisord.ini
+++ b/php-5.6-fpm-alpine/rootfs/etc/supervisor.d/supervisord.ini
@@ -7,4 +7,4 @@ command=/usr/sbin/sshd -D -e
 [program:php-fpm]
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-command=/usr/local/sbin/php-fpm
+command=/usr/local/sbin/php-fpm -O
