--- a/php-7.0-alpine/Dockerfile
+++ b/php-7.0-alpine/Dockerfile
@@ -37,4 +37,6 @@ WORKDIR ${PROJECT_PATH}
 
 VOLUME ["${SSH_SERVER_KEYS}"]
 
-CMD ["entrypoint.sh"]
+ENTRYPOINT ["entrypoint.sh"]
+
+CMD ["/usr/sbin/sshd", "-D", "-e"]
