Update supervisord config

--- a/php-5.6-fpm-alpine/rootfs/etc/supervisor.d/supervisord.ini
+++ b/php-5.6-fpm-alpine/rootfs/etc/supervisor.d/supervisord.ini
@@ -1,10 +1,14 @@
 [supervisord]
-nodaemon=true
+nodaemon = true
+pidfile = /var/run/supervisord/supervisord.pid
+logfile = /dev/stdout
 
 [program:sshd]
-command=/usr/sbin/sshd -D -e
+stdout_logfile = /dev/stdout
+stdout_logfile_maxbytes = 0
+command = /usr/sbin/sshd -D -e
 
 [program:php-fpm]
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-command=/usr/local/sbin/php-fpm -O
+stdout_logfile = /dev/stdout
+stdout_logfile_maxbytes = 0
+command= /usr/local/sbin/php-fpm -O
