--- a/php-7.0-fpm-alpine/rootfs/etc/supervisor.d/supervisord.ini
+++ b/php-7.0-fpm-alpine/rootfs/etc/supervisor.d/supervisord.ini
@@ -1,7 +1,7 @@
 [supervisord]
 nodaemon = true
 pidfile = /var/run/supervisord/supervisord.pid
-logfile = /dev/stdout
+logfile = /dev/null
 
 [program:sshd]
 stdout_logfile = /dev/stdout
